# linux-snake-game-sdl2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
includes/: Snake.h  Sprite.h
object/: Snake.cpp  Sprite.cpp
